--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,52 +1,77 @@
 /* Login.css */
+
 .login-container {
-    width: 300px;
-    margin: 100px auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #0e0b16; /* Dark background */
+    color: #441313; /* Light text */
+}
+
+.login-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.modalContainer {
+    background: #efefef; /* Slightly lighter dark background */
     padding: 20px;
-    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-    text-align: center;
+    width: 100%;
+    max-width: 400px;
 }
 
-.login-container h1 {
-    margin-bottom: 20px;
-    font-size: 24px;
-}
-
-.login-container form {
+.login_panel {
     display: flex;
     flex-direction: column;
 }
 
-.login-container label {
-    margin-bottom: 5px;
+.input_field {
+    margin-bottom: 10px;
     font-weight: bold;
+    text-align: left;
+    color: #441313; /* Light text */
 }
 
-.login-container input {
-    margin-bottom: 15px;
+.login_panel input[type="text"],
+.login_panel input[type="password"] {
     padding: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 16px;
+    width: calc(100% - 22px);
+    box-sizing: border-box;
 }
 
-.login-container button {
+.action_button {
     padding: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     background-color: #007bff;
     color: white;
     font-size: 16px;
     cursor: pointer;
+    margin-top: 10px;
+    transition: background-color 0.3s;
 }
 
-.login-container button:hover {
+.action_button:hover {
     background-color: #0056b3;
 }
 
-.login-container .error {
-    color: red;
-    margin-bottom: 15px;
+.loginlink {
+    margin-top: 10px;
+    color: #007bff;
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+.loginlink:hover {
+    color: #0056b3;
 }
