--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,52 +1,88 @@
-/* Login.css */
-.login-container {
-    width: 300px;
-    margin: 100px auto;
-    padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    background-color: #f9f9f9;
-    text-align: center;
+/* Register.css */
+.register-container {
+ display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: #0e0b16; /* Dark background */
+    color: #441313; /* Light text */
 }
 
-.login-container h1 {
+.register-modal {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.modalContainer {
+    background: #efefef; /* Slightly lighter dark background */
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+    border-radius: 8px;
+    width: 100%;
+    max-width: 400px;
+}
+
+.register-container h1 {
     margin-bottom: 20px;
     font-size: 24px;
+    color: #333;
 }
 
-.login-container form {
+.register-form {
     display: flex;
     flex-direction: column;
+    align-items: stretch;
 }
 
-.login-container label {
+.register-form label {
+    margin-top: 10px;
     margin-bottom: 5px;
     font-weight: bold;
+    text-align: left;
 }
 
-.login-container input {
-    margin-bottom: 15px;
+.register-form input {
     padding: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 4px;
+    border-radius: 5px;
+    font-size: 16px;
+    width: calc(100% - 22px);
+    box-sizing: border-box;
 }
 
-.login-container button {
+.register-form button {
     padding: 10px;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     background-color: #007bff;
     color: white;
     font-size: 16px;
     cursor: pointer;
+    margin-top: 20px;
 }
 
-.login-container button:hover {
+.register-form button:hover {
     background-color: #0056b3;
 }
 
-.login-container .error {
+.register-container .error {
     color: red;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
+}
+
+.register-container p {
+    margin-top: 20px;
+}
+
+.register-container a {
+    color: #007bff;
+    text-decoration: none;
+}
+
+.register-container a:hover {
+    text-decoration: underline;
 }
