--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -6,6 +6,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     background-color: #0e0b16; /* Dark background */
     color: #441313; /* Light text */
 }
