--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -5,6 +5,7 @@
     justify-content: center;
     align-items: center;
     height: 100vh;
+    width: 100vw;
     background-color: #0e0b16; /* Dark background */
     color: #441313; /* Light text */
 }
@@ -21,7 +22,7 @@
     padding: 20px;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
-    width: 100%;
+    width: 50%;
     max-width: 400px;
 }
 
