added header toggle for small screens

--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -75,3 +75,41 @@ header.navbar .nav_item:hover {
     background-color: #c3073f; /* Red background on hover */
     color: #fff;
 }
+
+header.navbar .hamburger .bar {
+    width: 25px;
+    height: 3px;
+    background-color: #f5f5f5;
+    margin: 4px 0;
+    transition: 0.3s;
+}
+
+
+/* Media Queries */
+@media (max-width: 768px) {
+    header.navbar nav {
+        display: none; /* Hide nav links initially on smaller screens */
+        flex-direction: column;
+        width: 100%;
+        background-color: #0e0b16;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 10px 0;
+    }
+
+    header.navbar nav.open {
+        display: flex; /* Show nav links when hamburger is clicked */
+    }
+
+    header.navbar .homepage_links {
+        margin: 10px 0;
+        padding: 10px 0;
+        width: 100%;
+        text-align: center;
+    }
+
+    header.navbar .hamburger {
+        display: flex; /* Show hamburger icon on smaller screens */
+    }
+}
