--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -162,12 +162,24 @@
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    height: 40%;
+    height: 50%;
     margin-bottom: 20px;
 }
 
+.button-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    height: 10%;
+    width: 100%
+}
+
+.button-container button{
+    border-radius: 50%;
+}
 .starred-player img {
-    height: 80%;
+    height: 70%;
 }
 
 .starred-color-bar {
