--- a/frontend/src/components/EndedGames/EndedGames.css
+++ b/frontend/src/components/EndedGames/EndedGames.css
@@ -1,7 +1,7 @@
 .ended-games-container{
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
     width: 100vw;
     height: 100vh;
