--- a/frontend/src/components/CreateGame/CreateGame.css
+++ b/frontend/src/components/CreateGame/CreateGame.css
@@ -1,7 +1,7 @@
 
 .create-game-container {
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
     flex-direction: column;
     width: 100vw;
