--- a/frontend/src/components/Login/Login.css
+++ b/frontend/src/components/Login/Login.css
@@ -1,10 +1,8 @@
 /* Login.css */
 
 .login-container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-rows: auto 1fr;
     height: 100vh;
     width: 100vw;
     background-color: #0e0b16; /* Dark background */
