--- a/frontend/src/components/Register/Register.css
+++ b/frontend/src/components/Register/Register.css
@@ -1,20 +1,21 @@
 /* Register.css */
 .register-container {
- display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: grid;
+    grid-template-rows: auto 1fr;
     height: 100vh;
     width: 100vw;
     background-color: #0e0b16; /* Dark background */
     color: #441313; /* Light text */
 }
-
+.register-modal-container{
+    overflow: auto;
+}
 .register-modal {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
+    z-index: 1000; /* Ensure it's above the header */
 }
 
 .modalContainer {
