--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -16,13 +16,22 @@
 
 
 /* Game Info Styles */
-.game-info {
-    width: 100%;
-    height: 100%;
+.game-info-container {
+    width: 100vw;
+    height: 100vh;
     display: flex;
     justify-content: space-between; /* Space items to allow button to stay at the top */
     align-items: center;
+    flex-direction: row;
+}
+
+.game-info {
+    height: 100vh;
+    min-width: 40vw;
+    display: flex;
     flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
 }
 
 
@@ -165,7 +174,7 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    height: 40px;
+    height: 50px;
     width: 100%;
     justify-content: flex-start; /* Align items on the left */
 }
@@ -176,7 +185,7 @@
     align-items: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     border-radius: 10px;
-    height: 50%;
+    height: 70%;
     margin-bottom: 20px;
     max-width: 80vw;
     min-width: 30vw;
