--- a/frontend/src/components/JoinGame/JoinGame.css
+++ b/frontend/src/components/JoinGame/JoinGame.css
@@ -4,7 +4,7 @@
     height: 100vh;
     width: 100vw;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     flex-direction: column;
 }
 
