added battle win/lose switch

--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -239,7 +239,7 @@
 
 .attack-form-container{
     display: flex;
-    height: 100vh;
+    height: fit-content;
     flex-direction: column;
     justify-content: center;
     align-items: center;
