--- a/frontend/src/components/Elements/Countdown.css
+++ b/frontend/src/components/Elements/Countdown.css
@@ -5,7 +5,9 @@
     transform: translate(-50%, -50%);
     font-size: 15rem;
     font-weight: bold;
-    color: #359803;
+    color: #e70448;
+    border-color: #8a6d3b;
+    border-width: 3px;
     text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
     z-index: 1000;
     animation: fadeOut 0.5s 0.5s forwards; /* Add a 1 second delay before starting the fadeOut */
