--- a/frontend/src/components/Game/Game.css
+++ b/frontend/src/components/Game/Game.css
@@ -77,7 +77,7 @@
 }
 
 .attack-form {
-    margin: 20px 0;
+    margin: 10px 0;
 }
 
 .attack-form label {
@@ -239,7 +239,7 @@
 
 .attack-form-container{
     display: flex;
-    height: fit-content;
+    height: 100vh;
     flex-direction: column;
     justify-content: center;
     align-items: center;
